Update $positive colour

--- a/scss/ionic.app.scss
+++ b/scss/ionic.app.scss
@@ -18,7 +18,8 @@ $dark:                            #444 !default;
 // The path for our ionicons font files, relative to the built CSS in www/css
 $ionicons-font-path: "../lib/ionic/fonts" !default;
 
-$positive:                        #02B5BA !default;
+$positive:                        #97D2C4 !default;
+// $positive:                        #02B5BA !default;
 $balanced:                        #FD7400 !default;
 $energized:                       #BEEB9F !default;
 $highlight:                       #FFFF9D !default;
