--- a/www/css/ionic.app.css
+++ b/www/css/ionic.app.css
@@ -3282,14 +3282,14 @@ a.subdued {
     .bar.bar-stable.bar-footer {
       background-image: linear-gradient(180deg, #b2b2b2, #b2b2b2 50%, transparent 50%); }
   .bar.bar-positive {
-    border-color: #018488;
-    background-color: #02b5ba;
-    background-image: linear-gradient(0deg, #018488, #018488 50%, transparent 50%);
+    border-color: #73c3b0;
+    background-color: #97d2c4;
+    background-image: linear-gradient(0deg, #73c3b0, #73c3b0 50%, transparent 50%);
     color: #fff; }
     .bar.bar-positive .title {
       color: #fff; }
     .bar.bar-positive.bar-footer {
-      background-image: linear-gradient(180deg, #018488, #018488 50%, transparent 50%); }
+      background-image: linear-gradient(180deg, #73c3b0, #73c3b0 50%, transparent 50%); }
   .bar.bar-calm {
     border-color: #0a9dc7;
     background-color: #11c1f3;
@@ -3316,7 +3316,7 @@ a.subdued {
     .bar.bar-balanced .title {
       color: #fff; }
     .bar.bar-balanced.bar-footer {
-      background-image: linear-gradient(180deg, #ca5d00, #018488 50%, transparent 50%); }
+      background-image: linear-gradient(180deg, #ca5d00, #73c3b0 50%, transparent 50%); }
   .bar.bar-energized {
     border-color: #b0e78a;
     background-color: #beeb9f;
@@ -3473,15 +3473,15 @@ a.subdued {
     background: none; }
 
 .bar-positive .button {
-  border-color: #018488;
-  background-color: #02b5ba;
+  border-color: #73c3b0;
+  background-color: #97d2c4;
   color: #fff; }
   .bar-positive .button:hover {
     color: #fff;
     text-decoration: none; }
   .bar-positive .button.active, .bar-positive .button.activated {
-    border-color: #018488;
-    background-color: #018488;
+    border-color: #73c3b0;
+    background-color: #73c3b0;
     box-shadow: inset 0 1px 4px rgba(0, 0, 0, 0.1); }
   .bar-positive .button.button-clear {
     border-color: transparent;
@@ -3736,13 +3736,13 @@ a.subdued {
     color: #f8f8f8; }
 
 .tabs-positive > .tabs, .tabs.tabs-positive {
-  border-color: #018488;
-  background-color: #02B5BA;
-  background-image: linear-gradient(0deg, #018488, #018488 50%, transparent 50%);
+  border-color: #73c3b0;
+  background-color: #97D2C4;
+  background-image: linear-gradient(0deg, #73c3b0, #73c3b0 50%, transparent 50%);
   color: #fff; }
   .tabs-positive > .tabs .tab-item .badge, .tabs.tabs-positive .tab-item .badge {
     background-color: #fff;
-    color: #02B5BA; }
+    color: #97D2C4; }
 
 .tabs-calm > .tabs, .tabs.tabs-calm {
   border-color: #0a9dc7;
@@ -3843,7 +3843,7 @@ a.subdued {
 .tabs-striped.tabs-top .tab-item.tab-item-active .badge, .tabs-striped.tabs-top .tab-item.active .badge, .tabs-striped.tabs-top .tab-item.activated .badge {
   top: 4%; }
 .tabs-striped.tabs-positive .tabs {
-  background-color: #02B5BA; }
+  background-color: #97D2C4; }
 .tabs-striped.tabs-positive .tab-item {
   color: rgba(255, 255, 255, 0.4);
   opacity: 1; }
@@ -3954,7 +3954,7 @@ a.subdued {
   background-color: #f8f8f8;
   background-image: none; }
 .tabs-striped.tabs-background-positive .tabs {
-  background-color: #02B5BA;
+  background-color: #97D2C4;
   background-image: none; }
 .tabs-striped.tabs-background-calm .tabs {
   background-color: #11c1f3;
@@ -4001,14 +4001,14 @@ a.subdued {
       top: 2px;
       opacity: 1; }
 .tabs-striped.tabs-color-positive .tab-item {
-  color: rgba(2, 181, 186, 0.4);
+  color: rgba(151, 210, 196, 0.4);
   opacity: 1; }
   .tabs-striped.tabs-color-positive .tab-item .badge {
     opacity: 0.4; }
   .tabs-striped.tabs-color-positive .tab-item.tab-item-active, .tabs-striped.tabs-color-positive .tab-item.active, .tabs-striped.tabs-color-positive .tab-item.activated {
     margin-top: -2px;
-    color: #02B5BA;
-    border: 0 solid #02B5BA;
+    color: #97D2C4;
+    border: 0 solid #97D2C4;
     border-top-width: 2px; }
     .tabs-striped.tabs-color-positive .tab-item.tab-item-active .badge, .tabs-striped.tabs-color-positive .tab-item.active .badge, .tabs-striped.tabs-color-positive .tab-item.activated .badge {
       top: 2px;
@@ -4103,9 +4103,9 @@ a.subdued {
   border-color: #b2b2b2; }
 
 .tabs-background-positive .tabs, .tabs-background-positive > .tabs {
-  background-color: #02B5BA;
-  background-image: linear-gradient(0deg, #018488, #018488 50%, transparent 50%);
-  border-color: #018488; }
+  background-color: #97D2C4;
+  background-image: linear-gradient(0deg, #73c3b0, #73c3b0 50%, transparent 50%);
+  border-color: #73c3b0; }
 
 .tabs-background-calm .tabs, .tabs-background-calm > .tabs {
   background-color: #11c1f3;
@@ -4160,13 +4160,13 @@ a.subdued {
       opacity: 1; }
 
 .tabs-color-positive .tab-item {
-  color: rgba(2, 181, 186, 0.4);
+  color: rgba(151, 210, 196, 0.4);
   opacity: 1; }
   .tabs-color-positive .tab-item .badge {
     opacity: 0.4; }
   .tabs-color-positive .tab-item.tab-item-active, .tabs-color-positive .tab-item.active, .tabs-color-positive .tab-item.activated {
-    color: #02B5BA;
-    border: 0 solid #02B5BA; }
+    color: #97D2C4;
+    border: 0 solid #97D2C4; }
     .tabs-color-positive .tab-item.tab-item-active .badge, .tabs-color-positive .tab-item.active .badge, .tabs-color-positive .tab-item.activated .badge {
       opacity: 1; }
 
@@ -4247,7 +4247,7 @@ ion-tabs.tabs-color-active-stable .tab-item {
 ion-tabs.tabs-color-active-positive .tab-item {
   color: #444; }
   ion-tabs.tabs-color-active-positive .tab-item.tab-item-active, ion-tabs.tabs-color-active-positive .tab-item.active, ion-tabs.tabs-color-active-positive .tab-item.activated {
-    color: #02B5BA; }
+    color: #97D2C4; }
 ion-tabs.tabs-color-active-calm .tab-item {
   color: #444; }
   ion-tabs.tabs-color-active-calm .tab-item.tab-item-active, ion-tabs.tabs-color-active-calm .tab-item.active, ion-tabs.tabs-color-active-calm .tab-item.activated {
@@ -4395,7 +4395,7 @@ ion-tabs.tabs-color-active-dark .tab-item {
   .tab-item.tab-item-active.tab-item-stable, .tab-item.active.tab-item-stable, .tab-item.activated.tab-item-stable {
     color: #f8f8f8; }
   .tab-item.tab-item-active.tab-item-positive, .tab-item.active.tab-item-positive, .tab-item.activated.tab-item-positive {
-    color: #02B5BA; }
+    color: #97D2C4; }
   .tab-item.tab-item-active.tab-item-calm, .tab-item.active.tab-item-calm, .tab-item.activated.tab-item-calm {
     color: #11c1f3; }
   .tab-item.tab-item-active.tab-item-assertive, .tab-item.active.tab-item-assertive, .tab-item.activated.tab-item-assertive {
@@ -4891,8 +4891,8 @@ ion-tabs.tabs-color-active-dark .tab-item {
     background-color: #f8f8f8;
     color: #444; }
   .item.item-positive {
-    border-color: #018488;
-    background-color: #02B5BA;
+    border-color: #73c3b0;
+    background-color: #97D2C4;
     color: #fff; }
   .item.item-calm {
     border-color: #0a9dc7;
@@ -4934,8 +4934,8 @@ ion-tabs.tabs-color-active-dark .tab-item {
     border-color: #a2a2a2;
     background-color: #e5e5e5; }
   .item.active.item-positive, .item.activated.item-positive, .item-complex.active .item-content.item-positive, .item-complex.activated .item-content.item-positive, .item .item-content.active.item-positive, .item .item-content.activated.item-positive {
-    border-color: #018488;
-    background-color: #018488; }
+    border-color: #73c3b0;
+    background-color: #73c3b0; }
   .item.active.item-calm, .item.activated.item-calm, .item-complex.active .item-content.item-calm, .item-complex.activated .item-content.item-calm, .item .item-content.active.item-calm, .item .item-content.activated.item-calm {
     border-color: #0a9dc7;
     background-color: #0a9dc7; }
@@ -5013,12 +5013,12 @@ a.item-content {
     border-color: #a2a2a2;
     background-color: #e5e5e5; }
 .item-complex.item-positive > .item-content {
-  border-color: #018488;
-  background-color: #02B5BA;
+  border-color: #73c3b0;
+  background-color: #97D2C4;
   color: #fff; }
   .item-complex.item-positive > .item-content.active, .item-complex.item-positive > .item-content:active {
-    border-color: #018488;
-    background-color: #018488; }
+    border-color: #73c3b0;
+    background-color: #73c3b0; }
 .item-complex.item-calm > .item-content {
   border-color: #0a9dc7;
   background-color: #11c1f3;
@@ -5587,7 +5587,7 @@ a.item-content {
   background-color: #f8f8f8;
   color: #444; }
 .tabs .tab-item .badge.badge-positive, .badge.badge-positive {
-  background-color: #02B5BA;
+  background-color: #97D2C4;
   color: #fff; }
 .tabs .tab-item .badge.badge-calm, .badge.badge-calm {
   background-color: #11c1f3;
@@ -5769,8 +5769,8 @@ a.item-content {
     stroke: #f8f8f8;
     fill: #f8f8f8; }
   .spinner.spinner-positive {
-    stroke: #02B5BA;
-    fill: #02B5BA; }
+    stroke: #97D2C4;
+    fill: #97D2C4; }
   .spinner.spinner-calm {
     stroke: #11c1f3;
     fill: #11c1f3; }
@@ -5806,7 +5806,7 @@ a.item-content {
 .spinner-spiral.spinner-stable .stop2 {
   stop-color: #f8f8f8; }
 .spinner-spiral.spinner-positive .stop2 {
-  stop-color: #02B5BA; }
+  stop-color: #97D2C4; }
 .spinner-spiral.spinner-calm .stop2 {
   stop-color: #11c1f3; }
 .spinner-spiral.spinner-balanced .stop2 {
@@ -6083,8 +6083,8 @@ input[type="radio"][disabled], input[type="checkbox"][disabled], input[type="rad
   .checkbox input:before, .checkbox .checkbox-icon:before {
     border-color: #ddd; }
   .checkbox input:checked:before, .checkbox input:checked + .checkbox-icon:before {
-    background: #02B5BA;
-    border-color: #02B5BA; }
+    background: #97D2C4;
+    border-color: #97D2C4; }
 
 .checkbox-light input:before, .checkbox-light .checkbox-icon:before {
   border-color: #ddd; }
@@ -6099,10 +6099,10 @@ input[type="radio"][disabled], input[type="checkbox"][disabled], input[type="rad
   border-color: #b2b2b2; }
 
 .checkbox-positive input:before, .checkbox-positive .checkbox-icon:before {
-  border-color: #02B5BA; }
+  border-color: #97D2C4; }
 .checkbox-positive input:checked:before, .checkbox-positive input:checked + .checkbox-icon:before {
-  background: #02B5BA;
-  border-color: #02B5BA; }
+  background: #97D2C4;
+  border-color: #97D2C4; }
 
 .checkbox-calm input:before, .checkbox-calm .checkbox-icon:before {
   border-color: #11c1f3; }
@@ -6265,8 +6265,8 @@ input[type="radio"][disabled], input[type="checkbox"][disabled], input[type="rad
   border-color: #b2b2b2;
   background-color: #b2b2b2; }
 .toggle.toggle-positive input:checked + .track {
-  border-color: #02B5BA;
-  background-color: #02B5BA; }
+  border-color: #97D2C4;
+  background-color: #97D2C4; }
 .toggle.toggle-calm input:checked + .track {
   border-color: #11c1f3;
   background-color: #11c1f3; }
@@ -6387,9 +6387,9 @@ input[type="radio"][disabled], input[type="checkbox"][disabled], input[type="rad
 .toggle-small .toggle-stable input:checked + .track .handle {
   background-color: #b2b2b2; }
 .toggle-small .toggle-positive input:checked + .track {
-  background-color: rgba(2, 181, 186, 0.5); }
+  background-color: rgba(151, 210, 196, 0.5); }
 .toggle-small .toggle-positive input:checked + .track .handle {
-  background-color: #02B5BA; }
+  background-color: #97D2C4; }
 .toggle-small .toggle-calm input:checked + .track {
   background-color: rgba(17, 193, 243, 0.5); }
 .toggle-small .toggle-calm input:checked + .track .handle {
@@ -6551,9 +6551,9 @@ input[type="radio"][disabled], input[type="checkbox"][disabled], input[type="rad
   .range.range-stable input::-ms-fill-lower {
     background: #b2b2b2; }
   .range.range-positive input::-webkit-slider-thumb:before {
-    background: #02B5BA; }
+    background: #97D2C4; }
   .range.range-positive input::-ms-fill-lower {
-    background: #02B5BA; }
+    background: #97D2C4; }
   .range.range-calm input::-webkit-slider-thumb:before {
     background: #11c1f3; }
   .range.range-calm input::-ms-fill-lower {
@@ -6673,7 +6673,7 @@ input[type="radio"][disabled], input[type="checkbox"][disabled], input[type="rad
   .item-select.item-stable:after, .item-select.item-stable .input-label {
     color: #656565; }
   .item-select.item-positive select {
-    background: #02B5BA;
+    background: #97D2C4;
     color: #fff; }
   .item-select.item-positive:after, .item-select.item-positive .input-label {
     color: #fff; }
@@ -6833,30 +6833,30 @@ progress {
         box-shadow: none;
         color: #fff; }
   .button.button-positive {
-    border-color: #018488;
-    background-color: #02B5BA;
+    border-color: #73c3b0;
+    background-color: #97D2C4;
     color: #fff; }
     .button.button-positive:hover {
       color: #fff;
       text-decoration: none; }
     .button.button-positive.active, .button.button-positive.activated {
-      border-color: #018488;
-      background-color: #018488;
+      border-color: #73c3b0;
+      background-color: #73c3b0;
       box-shadow: inset 0 1px 4px rgba(0, 0, 0, 0.1); }
     .button.button-positive.button-clear {
       border-color: transparent;
       background: none;
       box-shadow: none;
-      color: #02B5BA; }
+      color: #97D2C4; }
     .button.button-positive.button-icon {
       border-color: transparent;
       background: none; }
     .button.button-positive.button-outline {
-      border-color: #02B5BA;
+      border-color: #97D2C4;
       background: transparent;
-      color: #02B5BA; }
+      color: #97D2C4; }
       .button.button-positive.button-outline.active, .button.button-positive.button-outline.activated {
-        background-color: #02B5BA;
+        background-color: #97D2C4;
         box-shadow: none;
         color: #fff; }
   .button.button-calm {
@@ -7619,13 +7619,13 @@ a.button {
   border-color: #b2b2b2; }
 
 .positive, a.positive {
-  color: #02B5BA; }
+  color: #97D2C4; }
 
 .positive-bg {
-  background-color: #02B5BA; }
+  background-color: #97D2C4; }
 
 .positive-border {
-  border-color: #018488; }
+  border-color: #73c3b0; }
 
 .calm, a.calm {
   color: #11c1f3; }
