Remove getting element or $event on deleteShift

--- a/www/templates/calendar/index.html
+++ b/www/templates/calendar/index.html
@@ -59,7 +59,7 @@
             </button>
           </span>
           <span>
-            <button class="button button-small standard-issue button-stable" ng-click="deleteShift($event)">
+            <button class="button button-small standard-issue button-stable" ng-click="deleteShift()">
               Off
             </button>
             <button class="button button-small standard-issue button-energized" ng-click="">
