Initial setup of sweet alert for swap; moved sweet alert css to scss

--- a/scss/ionic.app.scss
+++ b/scss/ionic.app.scss
@@ -22,6 +22,7 @@ $positive:                        #97D2C4 !default;
 // $positive:                        #02B5BA !default;
 $balanced:                        #FD7400 !default;
 $energized:                       #BEEB9F !default;
+$text-on-energized:               black !default;
 $highlight:                       #FFFF9D !default;
 
 // Include all of Ionic
