--- a/www/lib/ionic/scss/ionic.scss
+++ b/www/lib/ionic/scss/ionic.scss
@@ -13,6 +13,9 @@
 
   "custom/general/groups/detail",
 
+  // Third party
+  "third_party/sweet_alert",
+
   // Ionicons
   "ionicons/ionicons.scss",
 
