--- a/www/templates/calendar/index.html
+++ b/www/templates/calendar/index.html
@@ -62,13 +62,13 @@
             <button class="button button-small standard-issue button-stable" ng-click="deleteShift()">
               Off
             </button>
-            <button class="button button-small standard-issue button-energized" ng-click="">
+            <button class="button button-small standard-issue button-energized" ng-click="swapShift()">
               Swap
             </button>
           </span>
         </div>
       </div>
     </div>
-    
+
   </ion-content>
 </ion-view>
