--- a/www/templates/calendar/index.html
+++ b/www/templates/calendar/index.html
@@ -33,7 +33,7 @@
             </div>
             <div class="dates">
               <div class="row" ng-repeat="row in month.rows">
-                <div class="col date-col" ng-repeat="date in row" ng-class="{'not-current-month': !date.isInCurrentMonth, 'swap': date.shift.swap}" ng-click="dateSelected($event)" data-date="{{date.dayNum}}-{{date.month}}-{{date.year}}" data-shift-id="{{date.shift.id}}">
+                <div class="col date-col" ng-repeat="date in row" ng-class="{'not-current-month': !date.isInCurrentMonth, 'swap': date.shift.swap}" ng-click="dateSelected($event)" data-date="{{date.dayNum}}-{{date.month}}-{{date.year}}" data-shift-id="{{date.shift.id}}" data-swap="{{date.shift.swap}}">
                   <div class="date-number">
                     {{date.dayNum}}
                   </div>
@@ -62,7 +62,7 @@
             <button class="button button-small standard-issue button-stable" ng-click="deleteShift()">
               Off
             </button>
-            <button class="button button-small standard-issue button-energized" ng-click="swapShift()">
+            <button class="button button-small standard-issue button-energized swap-button" ng-disabled="disableSwap" ng-click="swapShift()">
               Swap
             </button>
           </span>
