--- a/www/lib/ionic/scss/ionic.scss
+++ b/www/lib/ionic/scss/ionic.scss
@@ -5,6 +5,7 @@
   "custom/main",
 
   "custom/calendar/calendar",
+  "custom/calendar/shift_index",
   "custom/calendar/shift_input",
   "custom/calendar/shift_patterns",
   "custom/calendar/shift_patterns_detail",
