--- a/www/css/ionic.app.css
+++ b/www/css/ionic.app.css
@@ -209,6 +209,25 @@ ion-scroll[direction=y] {
 .detailed-group-footer-holder {
   padding: 16px; }
 
+.item-avatar .date-as-square {
+  position: absolute;
+  top: 16px;
+  left: 16px;
+  text-align: center;
+  max-width: 40px;
+  max-height: 40px;
+  width: 100%;
+  height: 100%;
+  background-color: #BEEB9F;
+  border-radius: 50%;
+  font-size: 12px; }
+  .item-avatar .date-as-square .month {
+    margin-top: 4px;
+    margin-bottom: -7px; }
+
+.double-tab-bottom-buffer {
+  height: 30px; }
+
 body.stop-scrolling {
   height: 100%;
   overflow: hidden; }
