--- a/www/lib/ionic/scss/ionic.scss
+++ b/www/lib/ionic/scss/ionic.scss
@@ -15,6 +15,7 @@
   "custom/general/groups/detail",
 
   "custom/swaps/shared",
+  "custom/swaps/own_detail",
 
   // Third party
   "third_party/sweet_alert",
