--- a/www/lib/ionic/scss/custom/directives/_notification.scss
+++ b/www/lib/ionic/scss/custom/directives/_notification.scss
@@ -1,6 +1,5 @@
 .notification-box {
-  background-color: #33cd5f;
-  color: white;
+  background-color: $energized;
   padding: 15px 10px;
 
   .clear-button-holder {
