--- a/www/templates/swaps/own-detail.html
+++ b/www/templates/swaps/own-detail.html
@@ -19,7 +19,7 @@
       <div class="action-buttons-holder">
         <div>
           <div class="delete-link">
-            <a class="assertive" ng-click="">
+            <a class="assertive" ng-click="cancelOwnSwap()">
               Cancel
             </a>
           </div>
