--- a/www/templates/swaps/own-detail.html
+++ b/www/templates/swaps/own-detail.html
@@ -15,6 +15,9 @@
       <p>
         {{shift.group.name}}
       </p>
+      <p ng-if="shift.swap_notes">
+        Notes: {{shift.swap_notes}}
+      </p>
 
       <div class="action-buttons-holder">
         <div>
