If changing shift that already has a swap, warn user swap will be removed; also don't create new shift if same shift type

--- a/www/templates/swaps/own-detail.html
+++ b/www/templates/swaps/own-detail.html
@@ -6,7 +6,7 @@
   <ion-content>
     <div class="swap-own-detail-holder">
       <h4>
-        {{shift.shift_type.name}}
+        {{shift.shift_type.abbreviation}}: {{shift.shift_type.name}}
       </h4>
 
       <p>
