--- a/www/templates/swaps/index.html
+++ b/www/templates/swaps/index.html
@@ -1,8 +1,8 @@
-<ion-view view-title="Swaps" cache-view="false">
+<ion-view view-title="Swaps">
   <ion-tabs class="tabs-positive tabs-icon-only tabs-top">
 
     <ion-tab title="My Swaps" on-select="mySwapsTabSelected()" ng-controller="SwapsOwnCtrl">
-      <ion-view>
+      <ion-view cache-view="false">
         <div class="row loader-holder">
           <ion-spinner class="actual-loader spinner-positive" icon="lines" ng-show="loader"></ion-spinner>
         </div>
