--- a/www/lib/ionic/scss/ionic.scss
+++ b/www/lib/ionic/scss/ionic.scss
@@ -16,6 +16,7 @@
 
   "custom/swaps/shared",
   "custom/swaps/own_detail",
+  "custom/swaps/up_for_grabs",
 
   // Third party
   "third_party/sweet_alert",
